css/styles.css
/* ... */
.technology .bbe-thumbnail {
    float: left;
    margin-bottom: 50px;
    margin-top: 25px;
}

/* High velocity */

.high-velocity .btn-lg {
    border: 3px solid #F86465;
    color: #F86465;
}


/* Earth Quote */

.bbe-earth-image {
    background: url('../images/earth_image.jpg') no-repeat;
    background-position: 50% 50%;
    background-size: cover;
    min-height: 690px;
    background-attachment: fixed;
}

.bbe-earth-image h1 {
    color: #fff;
    font-size: 36px;
    margin-top: 130px;
}

/* Earth Quote */

/* Our Team */
.bbe-team {
    min-height: 290px;
    margin-bottom: 180px;
}

.bbe-team h3 {
    margin-top: 35px;
    font-size: 20px;
}

.bbe-team .bbe-team-para2 {
    margin-top: 60px;
}
.bbe-team .bbe-team-cta {
    background-color: #00d8b2;
	height: 263px;
    width: 263px;
}

.bbe-team-cta img{
	display: block;
    margin: 0px auto;
}

.bbe-team-cta .btn {
    background-color: #00d8b2;
}

.bbe-team .text-info {
    margin-bottom: 35px;
}

.bbe-team h4 {
    font-size: 16px;
    color: #888888;
}

.bbe-team .fa {
    color: #1b7cff;
}

.bbe-team .btn-lg {
	width: 100%;
	height: 263px;
    padding-top: 45%;
}
/* Our Team */

/* Client logos */
.bbe-client-logo .bbe-client-title {
    background-color: #1b7cff;
    min-height: 375px;
    width: 30%;
}

.bbe-client-logo .bbe-client-title h4 {
     font-size: 20px;
     line-height: 1.5;
     color: #fff;  
     padding-top: 100px;

}

.bbe-client-title .btn-lg {
    border: 2px solid #fff;
    color: #fff;
    margin-bottom: 50px;

}

.owl-carousel {
    display: none;
    position: relative;
    width: 100%;
    -ms-touch-action: pan-y;
    min-height: 375px;
}

.owl-theme .owl-controls .owl-page span{background: #ffffff;}



.bbe-container {
    max-height: 375px;
	background-color: #f96566;
    width: 100%; !important
    padding-right: 0; !important
}

/*.bbe-client-logo .bbe-logos {
    overflow-x: auto;
    padding-top: 62px;
}*/

.bbe-logos {
    position: relative;
    min-height: 200px;
}


#owl-demo .item{
    padding-top: 50px;

}
#owl-demo .item img{
     display: block;
     width: 70%;
     height: auto;
}

.carousel {
    width: 70%;
    float: right;
}

/*.bbe-logos .item {
    position: absolute;
}*/

/* Client logos */

/* Our work */

.bbe-our-work {
    margin-bottom: 80px;
}

.bbe-our-work .btn-info {
    border: #F86465 2px solid;
    color: #F86465;
}

/* Our work */

/* Awesome technology */




.bbe-awesome-technology .bbe-awesome-technology-banner {
    background-color: #1b7cff;
    color: #fff;
    min-width: 100%;
    min-height: 300px;


}

.bbe-awesome-technology .bbe-awesome-technology-banner div {
    margin-bottom: 20px;



}

.bbe-awesome-technology .bbe-awesome-technology-banner h1,
.bbe-awesome-technology .bbe-awesome-technology-banner p {
    color: #fff;
}

.bbe-awesome-technology .bbe-awesome-technology-banner h1 {
    margin-top: 100px;

}

.bbe-awesome-technology .col-sm-4:nth-child(odd) {
    background-color: #efefef;
}

.bbe-awesome-technology .row {
    display: table;
    margin-left: 0px;
    padding-right: 10px;



}

.bbe-awesome-technology [class*="col-"] {
    float: none;
    display: table-cell;
    vertical-align: top;
    padding-left: 15px;
    padding-right: 15px;
}


/* Awesome technology */

/* Latest news */

.bbe-latest-news {
    margin-bottom: 80px;
    padding-bottom: 0;
}

.bbe-latest-news .bbe-news {
    background-color: #efefef;
    height: 25%;
}

.bbe-latest-news h1 {
    margin-bottom: 50px;
}

.bbe-news-content h4 {
    font-size: 14px;
}

.bbe-news-content p.text-primary {
    font-size: 20px;
}

.bbe-news-content p.text-info {
    font-size: 14px;
}

.bbe-post-meta{
	width: 100%;
    display: block;
    float: left;
	background-color: #efefef;
}

.bbe-latest-news .bbe-news-image-1 {
    background: url('../images/newsimages.jpg') no-repeat -10px 0px;
    height: 243px;
}

.bbe-latest-news .bbe-news-image-2 {
    background: url('../images/newsimages.jpg') no-repeat -415px 0px;
    height: 243px;
}

.bbe-latest-news .bbe-news-image-3 {
    background: url('../images/newsimages.jpg') no-repeat -812px 0px;
    height: 243px;
}

.bbe-news-content {
    padding: 20px;
    height: 300px;
}

.bbe-news-date {
    line-height: 5;
    padding-left: 20px;
}

.bbe-latest-news .text-muted {
    font-size: 11px;
	color: #919191;
	text-align:center;
	    width: 50%;
}

/* Latest news */

.bbe-footer {
    background-color: #090a0a;
    padding: 40px 0px;
}

.bbe-footer .text-muted {
    font-size: 14px;
}

.bbe-footer-base {
    min-height: 40px;
    background-color: #333;
    color: #fff;
    padding-top: 10px;
}

.bbe-footer h5 {
    color: #DDDDDD;
}

/* Modal Form */

.bbe-form-popup .modal-content {
    background-color: #1b7cff;
}

.bbe-form-popup h2,
.bbe-form-popup p,
.bbe-form-popup a,
.bbe-form-popup span {
    color: #fff;
}

.bbe-form-popup .form-group {
    margin-top: 20px;
}

.bbe-form-popup .form-control {
    border-radius: 0;   
}

.bbe-form-popup .input-lg {
    height: 60px;
    color: #1b7cff; 
    font-weight: bold;
    margin: 7px 0;
}

.bbe-form-popup span.text-primary {
    color: #fff;
    padding-top: 20px;
    font-weight: bold;
}

.bbe-form-popup .bbe-form-message {
    padding-top: 20px;
}

.bbe-form-popup .form-control::-webkit-input-placeholder { color: #1b7cff; font-weight: bold; }
.bbe-form-popup .form-control:-moz-placeholder { color: #1b7cff; font-weight: bold; }
.bbe-form-popup .form-control::-moz-placeholder { color: #1b7cff; font-weight: bold;}
.bbe-form-popup .form-control:-ms-input-placeholder { color: #1b7cff; font-weight: bold;}
/* ... */

